# penenv

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build-flatpak.sh  build-packages.sh  cargo-sources.json  com.penenv.app.json  com.penenv.app.no-webkit.json  com.penenv.app.webkit.json  com.penenv.policy  commands.yaml  install.sh  penenv.desktop  penenv.spec
debian/: changelog  control  rules
src/: commands.rs  config.rs  container.rs  gtk_app.rs  main.rs
src/ui/: browser.rs  container.rs  desktop.rs  dialogs.rs  drawer.rs  editor.rs  mod.rs  terminal.rs  window.rs
