[package]
name = "penenv"
version = "1.1.1"
edition = "2021"

[features]
default = []
webkit = ["dep:webkit6"]
spice = []  # SPICE support - requires spice-gtk bindings (placeholder for future)

[dependencies]
gtk4 = "0.9"
libadwaita = "0.7"
chrono = "0.4"
vte4 = "0.8"
webkit6 = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sysinfo = "0.32"
log = "0.4"
env_logger = "0.11"
urlencoding = "2.1"

# Desktop support
open = "5"              # For opening URLs in external browser
